infrastructure/stacks/app-pipeline/vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Minimal VPC with 1 public subnet (NAT) + 2 private subnets, single NAT Gateway

Parameters:
  EnvironmentName:
    Description: Environment name
    Type: String
    Default: "dev"
    AllowedValues:
      - "dev"
      - "stg"
      - "prod"
  ProjectName:
    Description: Primary project short name
    Type: String
  AzA:
    Type: AWS::EC2::AvailabilityZone::Name
  AzB:
    Type: AWS::EC2::AvailabilityZone::Name
  AzC:
    Type: AWS::EC2::AvailabilityZone::Name
  VpcEndpointSgId:
    Description: Security Group ID to associate with VPC endpoints
    Type: AWS::EC2::SecurityGroup::Id
  EnableCodeBuildEndpoint:
    Description: Whether to create VPC endpoint for CodeBuild
    Type: String
    Default: "true"
    AllowedValues:
      - "true"
      - "false"
  EnableSTSEndpoint:
    Description: Whether to create VPC endpoint for STS
    Type: String
    Default: "true"
    AllowedValues:
      - "true"
      - "false"
  EnableSSMEndpoint:
    Description: Whether to create VPC endpoint for STS
    Type: String
    Default: "true"
    AllowedValues:
      - "true"
      - "false"
  EnableLogsEndpoint:
    Description: Whether to create VPC endpoint for CloudWatch Logs
    Type: String
    Default: "true"
    AllowedValues:
      - "true"
      - "false"
  EnableECRAPIEndpoint:
    Description: Whether to create VPC endpoint for ECR API
    Type: String
    Default: "true"
    AllowedValues:
      - "true"
      - "false"
  EnableECRDKREndpoint:
    Description: Whether to create VPC endpoint for ECR DKR
    Type: String
    Default: "true"
    AllowedValues:
      - "true"
      - "false"
  EnableSecretsManagerEndpoint:
    Description: Whether to create VPC endpoint for Secrets Manager
    Type: String
    Default: "true"
    AllowedValues:
      - "true"
      - "false"

Conditions:
  CreateCodeBuildEndpoint: !Equals [ !Ref EnableCodeBuildEndpoint, "true" ]
  CreateSTSEndpoint: !Equals [ !Ref EnableSTSEndpoint, "true" ]
  CreateSSMEndpoint: !Equals [ !Ref EnableSSMEndpoint, "true" ]
  CreateLogsEndpoint: !Equals [ !Ref EnableLogsEndpoint, "true" ]
  CreateECRAPIEndpoint: !Equals [ !Ref EnableECRAPIEndpoint, "true" ]
  CreateECRDKREndpoint: !Equals [ !Ref EnableECRDKREndpoint, "true" ]
  CreateSecretsManagerEndpoint: !Equals [ !Ref EnableSecretsManagerEndpoint, "true" ]

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags: [{ Key: Name, Value: !Sub "${ProjectName}-${EnvironmentName}-VPC" }]
  ipv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId: !Ref Vpc
      AmazonProvidedIpv6CidrBlock: true
  
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Ref AzA
      CidrBlock: 10.0.10.0/24
      MapPublicIpOnLaunch: true
      Ipv6CidrBlock: !Select [ 0, !Cidr [ !Select [ 0, !GetAtt Vpc.Ipv6CidrBlocks], 1, 64 ]]
      AssignIpv6AddressOnCreation: true
      EnableDns64: true
      Tags: [{ Key: Name, Value: !Sub "${ProjectName}-${EnvironmentName}-public-subnet1" }]

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Ref AzB
      CidrBlock: 10.0.11.0/24
      MapPublicIpOnLaunch: true
      Ipv6CidrBlock: !Select [ 1, !Cidr [ !Select [ 0, !GetAtt Vpc.Ipv6CidrBlocks], 2, 64 ]]
      AssignIpv6AddressOnCreation: true
      EnableDns64: true
      Tags: [{ Key: Name, Value: !Sub "${ProjectName}-${EnvironmentName}-public-subnet2" }]

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Ref AzA
      CidrBlock: 10.0.1.0/24
      Tags: [{ Key: Name, Value: !Sub "${ProjectName}-${EnvironmentName}-private-subnet1" }]
      MapPublicIpOnLaunch: false

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Ref AzB
      CidrBlock: 10.0.2.0/24
      Tags: [{ Key: Name, Value: !Sub "${ProjectName}-${EnvironmentName}-private-subnet2" }]
      MapPublicIpOnLaunch: false

  IGW:
    Type: AWS::EC2::InternetGateway
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref IGW

  PublicRTA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
  PublicRTB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  PublicRtAssocA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRTA
  PublicRtAssocB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRTB

  PublicDefaultRouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRTA
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
  PublicDefaultRouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRTB
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  NatEIPA:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  #NatEIPB:
  #  Type: AWS::EC2::EIP
  #  Properties:
  #    Domain: vpc

  NatGatewayA:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIPA.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags: [{ Key: Name, Value: !Sub "${ProjectName}-${EnvironmentName}-gateway" }]

  #NatGatewayB:
  #  Type: AWS::EC2::NatGateway
  #  Properties:
  #    AllocationId: !GetAtt NatEIPB.AllocationId
  #    SubnetId: !Ref PublicSubnetB
  #    Tags: [{ Key: Name, Value: !Sub "${ProjectName}-${EnvironmentName}-gateway" }]

  PrivateRTA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
  PrivateRTB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  PrivateRtAssocA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRTA
  PrivateRtAssocB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRTB

  PrivateDefaultRouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRTA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA
  PrivateDefaultRouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRTB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA

  S3GatewayEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref Vpc
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref PrivateRTA
        - !Ref PrivateRTB

  CodeBuildEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateCodeBuildEndpoint
    Properties:
      VpcId: !Ref Vpc
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.codebuild
      SubnetIds: [!Ref PrivateSubnetA, !Ref PrivateSubnetB]
      SecurityGroupIds: [!Ref VpcEndpointSgId]
      PrivateDnsEnabled: true

  LogsEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateLogsEndpoint
    Properties:
      VpcId: !Ref Vpc
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
      SubnetIds: [!Ref PrivateSubnetA, !Ref PrivateSubnetB]
      SecurityGroupIds: [!Ref VpcEndpointSgId]
      PrivateDnsEnabled: true

  StsEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateSTSEndpoint
    Properties:
      VpcId: !Ref Vpc
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.sts
      SubnetIds: [!Ref PrivateSubnetA, !Ref PrivateSubnetB]
      SecurityGroupIds: [!Ref VpcEndpointSgId]
      PrivateDnsEnabled: true

  EcrApiEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateECRAPIEndpoint
    Properties:
      VpcId: !Ref Vpc
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.api
      SubnetIds: [!Ref PrivateSubnetA, !Ref PrivateSubnetB]
      SecurityGroupIds: [!Ref VpcEndpointSgId]
      PrivateDnsEnabled: true

  EcrDkrEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateECRDKREndpoint
    Properties:
      VpcId: !Ref Vpc
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.dkr
      SubnetIds: [!Ref PrivateSubnetA, !Ref PrivateSubnetB]
      SecurityGroupIds: [!Ref VpcEndpointSgId]
      PrivateDnsEnabled: true

  SecretsManagerEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateSecretsManagerEndpoint
    Properties:
      VpcId: !Ref Vpc
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.secretsmanager
      SubnetIds: [!Ref PrivateSubnetA, !Ref PrivateSubnetB]
      SecurityGroupIds: [!Ref VpcEndpointSgId]
      PrivateDnsEnabled: true

  SsmEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateSSMEndpoint
    Properties:
      VpcId: !Ref Vpc
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
      SubnetIds: [!Ref PrivateSubnetA, !Ref PrivateSubnetB]
      SecurityGroupIds: [!Ref VpcEndpointSgId]
      PrivateDnsEnabled: true

  SsmMessagesEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: CreateSSMEndpoint
    Properties:
      VpcId: !Ref Vpc
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssmmessages
      SubnetIds: [!Ref PrivateSubnetA, !Ref PrivateSubnetB]
      SecurityGroupIds: [!Ref VpcEndpointSgId]
      PrivateDnsEnabled: true


Outputs:
  VpcId: { Value: !Ref Vpc }
  PublicSubnetAId: { Value: !Ref PublicSubnetA }
  PublicSubnetBId: { Value: !Ref PublicSubnetB }
  PrivateSubnetAId: { Value: !Ref PrivateSubnetA }
  PrivateSubnetBId: { Value: !Ref PrivateSubnetB }
  NatGatewayAId: { Value: !Ref NatGatewayA }
  #NatGatewayBId: { Value: !Ref NatGatewayB }
